# glyph

./: .gitignore  AGENTS.md  LICENSE-APACHE  LICENSE-MIT  README.md  llms.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  playground.yml  release.yml
archive/: GLYPH.md  GLYPH_STEP3.md  MANIFESTO.md  README.md  SESSION_1.md  SPEC_DECISIONS.md  glyph-annotation-sketch-pt2.md  glyph-annotation-sketch-pt3.md  glyph-annotation-sketch-pt4.md  glyph-annotation-sketch-pt5.md  glyph-annotation-sketch-pt6.md  glyph-annotation-sketch.md  glyph-day-0-parser.md  glyph-lsp-discussion.md  glyph-session.md  glyph-strategy.md  glyph-transpiler-plan.md  glyph_step5_notes.md  glyph_step6_session.md  grammar.js  scanner.c
benchmarks/: FINDINGS.md  README.md  count_tokens.py  diff_stability.sh  measure.sh
benchmarks/diff_stability/: pricing.glyph
benchmarks/glyph/: load_feed.glyph  parse_user.glyph  slugify.glyph
benchmarks/go/: load_feed.go  parse_user.go  slugify.go
benchmarks/python/: load_feed.py  parse_user.py  slugify.py
benchmarks/results/: 2026-05-26T11-00-46Z.json  2026-06-14T10-36-24Z.json  2026-06-15T11-13-51Z.json  2026-06-15T20-52-43Z.json  diff-stability-2026-06-15T11-23-53Z.json
benchmarks/rust/: load_feed.rs  parse_user.rs  slugify.rs
benchmarks/typescript/: load_feed.ts  parse_user.ts  slugify.ts
benchmarks/verifiability/: check.sh  exhaustiveness.glyph  exhaustiveness.ts  unsafe_cast.glyph  unsafe_cast.ts
docs/: README.md  autonomous-loop.md  book-outline.md  dogfooding-gaps.md  error-codes.md  implementation-plan.md  manifesto.md  open-questions.md  stability.md
docs/guide/: README.md  editor-setup.md  external-imports.md  for-typescript-developers.md  getting-started.md  shared-state.md  start-here.md  tour.md  tutorial.md  typed-apis.md
docs/language/: grammar-status.md  spec.md
docs/launch/: README.md  announcement.md  onboarding-first-100.md  release-notes-v0.1.md  show-hn.md
docs/plan/: 0.1.3-generated-types.md  0.1.7-language-and-agent-experience.md  0.1.9-panel-feedback.md  interop-q43.md
docs/reference/: stdlib.md
docs/roadmap/: 04-transpiler.md  05-typechecker.md  06-dogfooding.md  07-lsp.md  08-09-packaging.md  overview.md  releases.md
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
examples/: 01_validator.glyph  02_async_errors.glyph  03_react_component.glyph  04_cli_tool.glyph  05_rest_api.glyph  README.md
examples/.types/: glyph-externals.d.ts
examples/apps/: fridge.glyph
examples/corpus/: async_chain.glyph  classify.glyph  generic_descriptor.glyph  generics.glyph  higher_order.glyph  infer_output.glyph  infer_shape.glyph  list_ops.glyph  maybe.glyph  shapes.glyph  store.glyph  sum.glyph  tree.glyph
glyph-compiler/: Cargo.toml  README.md  rust-toolchain.toml
glyph-compiler/crates/glyph-ast/: Cargo.toml
glyph-compiler/crates/glyph-ast/src/: lib.rs
glyph-compiler/crates/glyph-cli/: Cargo.toml
glyph-compiler/crates/glyph-cli/src/: build.rs  config.rs  diagnostic.rs  doctor.rs  examples.rs  explain.rs  fmt.rs  gen.rs  init.rs  lib.rs  main.rs  publish.rs  regen.rs  render.rs  run.rs  runtime.rs  sourcemap.rs  tscmap.rs
glyph-compiler/crates/glyph-cli/tests/: bootstrap.rs  init.rs  integration.rs  negative.rs  stdlib_docs.rs
glyph-compiler/crates/glyph-db/: Cargo.toml
glyph-compiler/crates/glyph-db/src/: lib.rs
glyph-compiler/crates/glyph-emit/: Cargo.toml
glyph-compiler/crates/glyph-emit/src/: lib.rs
glyph-compiler/crates/glyph-formatter/: Cargo.toml
glyph-compiler/crates/glyph-formatter/src/: canonical.rs  lib.rs
glyph-compiler/crates/glyph-formatter/tests/: format.rs
glyph-compiler/crates/glyph-lexer/: Cargo.toml
glyph-compiler/crates/glyph-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
glyph-compiler/crates/glyph-lsp/: Cargo.toml
glyph-compiler/crates/glyph-lsp/src/: analysis.rs  lib.rs  mcp.rs
glyph-compiler/crates/glyph-parser/: Cargo.toml
glyph-compiler/crates/glyph-parser/src/: cursor.rs  decl.rs  error.rs  expr.rs  jsx.rs  lib.rs  pat.rs  stmt.rs  types.rs
glyph-compiler/crates/glyph-parser/tests/: fuzz.rs  snapshots.rs
glyph-compiler/crates/glyph-parser/tests/fixtures/: await_try.glyph  hello.glyph
glyph-compiler/crates/glyph-parser/tests/snapshots/: snapshots__await_try_parses.snap  snapshots__example_01_validator_parses.snap  snapshots__example_02_async_errors_parses.snap  snapshots__example_03_react_component_parses.snap  snapshots__example_04_cli_tool_parses.snap  snapshots__hello_world_parses.snap
glyph-compiler/crates/glyph-resolver/: Cargo.toml
glyph-compiler/crates/glyph-resolver/src/: collect.rs  error.rs  lib.rs  lints.rs  module_graph.rs  prelude.rs  resolve.rs  symbol.rs
glyph-compiler/crates/glyph-resolver/tests/: examples.rs
glyph-compiler/crates/glyph-runtime/: Cargo.toml
glyph-compiler/crates/glyph-runtime/src/: lib.rs
glyph-compiler/crates/glyph-typechecker/: Cargo.toml
glyph-compiler/crates/glyph-typechecker/src/: assign.rs  lib.rs  lower.rs  owned.rs  ty.rs  type_map.rs
glyph-compiler/crates/glyph-typechecker/tests/: examples.rs  fuzz.rs
glyph-compiler/crates/glyph-wasm/: Cargo.toml
glyph-compiler/crates/glyph-wasm/src/: lib.rs
glyph-compiler/runtime/: README.md  glyph-bootstrap.ts  glyph-node-shims.d.ts  glyph-prelude.d.ts  glyph-stdlib.d.ts
glyph-compiler/runtime/std/: array.ts  fs.ts  http.ts  io.ts  json.ts  option.ts  process.ts  record.ts  result.ts  schema.ts  store.ts  stream.ts  string.ts  test.ts  time.ts
glyph-compiler/runtime/tools/: ts-to-schema.mjs  zod-to-schema.mjs
npm/: README.md
npm/glyph/: README.md  package.json
npm/scripts/: resolve.test.mjs  stage.mjs
playground/: README.md  build.sh  index.html  playground.js  style.css
scripts/: check_site.py  check_versions.py
tests/negative/: barrel_file_only_imports.expected_error  barrel_file_only_imports.glyph  duplicate_top_level_name.glyph  (+40 more)
web/: index.html  llms.txt  robots.txt  sitemap.xml  style.css
(+30 files in other folders)
