[package]
name = "glyph-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Incremental query database for Glyph. Wraps parse + resolve + assign as salsa-tracked queries (I4). Per-file inputs; per-declaration intermediates land in week 2 day 6+."

[dependencies]
glyph-ast.workspace = true
glyph-parser.workspace = true
glyph-resolver.workspace = true
glyph-typechecker.workspace = true
salsa.workspace = true
