[package]
name = "glyph-emit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AST-to-TypeScript visitor. Dumb visitor, no IR (Q5 hybrid). D6 JSX directive lowering happens as AST rewrite before emission."

[dependencies]
glyph-ast.workspace = true
glyph-resolver.workspace = true
glyph-typechecker.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
glyph-parser.workspace = true
