[package]
name = "glyph-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hand-written Pratt parser for Glyph. D7 context-disambiguated <, D6 JSX sub-grammar, D18 precedence table from archive/GLYPH.md §2."

[dependencies]
glyph-lexer.workspace = true
glyph-ast.workspace = true
ariadne.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
